# Code-Minimizer

./: .gitattributes  .gitignore  Cargo.toml  README.md  README.zh-CN.md
docs/: API.md  API.zh-CN.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md
src/: lib.rs  main.rs
src/app/: cli.rs  config.rs  error.rs  logging.rs  mod.rs  report.rs
src/execution/: command_template.rs  mod.rs
src/execution/runner/: mod.rs  outcome.rs  output.rs  process.rs  signals.rs
src/ir/: analysis.rs  dependency.rs  index.rs  mod.rs  node.rs  score.rs  sibling.rs  snapshot.rs  symbol.rs
src/lang/: java.rs  javascript.rs  mod.rs  tree_sitter_common.rs
src/oracle/: checks.rs  execute.rs  mod.rs  normalize.rs  tests.rs  types.rs
src/reducer/: attempt.rs  blank_lines.rs  cache.rs  candidate.rs  context.rs  ddmin.rs  edit_plan.rs  engine.rs  engine_tests.rs  final_sweep.rs  group.rs  grouping.rs  mod.rs  objective.rs  ordering.rs  phase.rs  state.rs  trial_runner.rs  validation.rs
src/reducer/algorithms/: mod.rs  structured.rs
src/reducer/model/: candidate.rs  mod.rs  strategy.rs  trial.rs
src/reducer/planning/: grouping.rs  mod.rs  ordering.rs  phase.rs
src/reducer/runtime/: attempt.rs  context.rs  engine.rs  mod.rs  objective.rs  reporting.rs  state.rs  (+1 more)
src/source/: edit.rs  mod.rs  output_diff.rs
src/workspace/: mod.rs
test_cases/java/: Test.java  Test.min.structured.java  Test.min.weighted-random.java  reduction-report.structured.json  reduction-report.weighted-random.json  run.sh  test.sh  test.structured.sh  test.weighted-random.sh
tests/: integration_reduce.rs
(+14 files in other folders)
