[package]
name = "code-minimizer"
version = "0.1.0"
edition = "2024"
description = "A structure-aware single-file reducer for compiler and runtime fuzzing."
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
shell-words = "1.1.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
tree-sitter = "0.26.9"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
wait-timeout = "0.2.1"

[lib]
name = "code_minimizer"
path = "src/lib.rs"
